Style jumbotron and browse button on homepage to fix issues on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -56,6 +56,7 @@ body {
 
 .jumbotron {
     color: #363837;
+    margin-top: -49px;
 }
 .welcome-bg {
     text-align: center;
@@ -92,7 +93,7 @@ hr.btm-rule {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 40%;
+    max-width: 50%;
 }
 
 /* Logo text and icon*/
@@ -240,6 +241,14 @@ hr.btm-rule {
     color: black!important;
   }
 }
+
+@media only screen and (max-width: 320px) {
+    .navbar-brand {
+        font-size: 22px;
+
+    }
+}
+
 
 
 /* Animated homepage carousel code from http://anicollection.github.io/#/flippers/flipInX */
